# mmorpg

./: .gitignore  README.md
doc/: PR-ORchestrateur.md  TP2-Sujet
mmorpg/: Cargo.toml
mmorpg/src/: loginmenu.rs  main.rs
mmorpg/src/state/: mod.rs
mmorpg_lab/: Cargo.toml  fake_servers.py
mmorpg_lab/.cargo/: config.toml
mmorpg_lab/Logs/: broker.txt  client  orchestrator.txt  spatialServer.txt
mmorpg_lab/broker/: Cargo.toml
mmorpg_lab/broker/src/: main.rs  network.rs  routing.rs  state.rs
mmorpg_lab/chat/: Cargo.toml
mmorpg_lab/chat/assets/: badwords.txt
mmorpg_lab/chat/src/: chat_service.rs  main.rs  moderator.rs
mmorpg_lab/client/: Cargo.toml
mmorpg_lab/client/src/: chatbox.rs  game.rs  loginmenu.rs  main.rs  network.rs
mmorpg_lab/dedicated_server/: Cargo.toml
mmorpg_lab/dedicated_server/src/: ai_plugin.rs  food.rs  heartbeat.rs  main.rs  network.rs
mmorpg_lab/fakebroker/: Cargo.toml
mmorpg_lab/fakebroker/src/: main.rs
mmorpg_lab/game_sockets/: Cargo.toml
mmorpg_lab/game_sockets/src/protocols/: mod.rs  quic_protocol.rs
mmorpg_lab/gatekeeper/: Cargo.toml
mmorpg_lab/gatekeeper/src/: handlers.rs  main.rs  redis_pool.rs
mmorpg_lab/orchestrator/: Cargo.toml
mmorpg_lab/orchestrator/src/: listen.py  listener.rs  main.rs  quic_listener.rs  spawner.rs
mmorpg_lab/shared/: Cargo.toml
mmorpg_lab/shared/src/: broker_protocol.rs  lib.rs  orchestrator_protocol.rs  rect.rs
mmorpg_lab/spatialserver/: Cargo.toml
mmorpg_lab/spatialserver/src/: main.rs  quadtree.rs  rect.rs  spatialservice.rs  util.rs
