[workspace]
resolver = "2"
members = [
    "client",
    "dedicated_server",
    "orchestrator",
    "gatekeeper",
    "shared",
    "broker",
    "spatialserver",
    "game_sockets", 
    "fakebroker", 
    "chat",
]

default-members = [
    "client",
    "dedicated_server",
    "orchestrator",
    "gatekeeper",
    "shared",
    "broker",
    "spatialserver",
    "game_sockets",
    "chat",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
