[package]
name = "broker"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
shared = { path = "../shared" }

# Game sockets and related dependencies
game_sockets = { path = "../game_sockets"}
uuid = { version = "1", features = ["v4"] }
bytes = "1"
bincode = "1.3"

#logs 
tracing = "0.1.44"
tracing-subscriber = "0.3.23"