[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
bevy_egui = "0.39.1"
serde = { version = "1.0.228", features = ["derive"] }

futures-lite = "2.3"
surf ="2.3"

# Network dependencies
bevy_quinnet = { version = "0.20.0", features = ["server", "bincode-messages"] }
postcard = { version = "1.0.0", features = ["alloc"] }

# Local workspace dependencies
shared = { path = "../shared" }

