[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["dynamic_linking"] }
bevy_egui = "0.39.1"
serde = { version = "1.0.228", features = ["derive"] }

futures-lite = "2.3"
surf ="2.3"

# Network dependencies
postcard = { version = "1.0.0", features = ["alloc"] }
bincode = "1.3"
bytes = "1.0"

uuid = { version = "1.23.1", features = ["v4", "serde"] }

# Local workspace dependencies
shared = { path = "../shared" }
game_sockets = { path = "../game_sockets"}

#logs 
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

