[package]
name = "dedicated_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }

# Network dependencies
bevy_quinnet = { version = "0.20.0", features = ["server", "bincode-messages"] }
postcard = { version = "1.0.0", features = ["alloc"] }

# Heartbeat & Orchestrator dependencies
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4"] }

# Local workspace dependencies
shared = { path = "../shared" }