[package]
name = "dedicated_server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.8"

# Network dependencies
postcard = { version = "1.0.0", features = ["alloc"] }
bincode = "1.3"
bytes = "1.0"

# Heartbeat & Orchestrator dependencies
serde_json = "1.0.149"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

# Local workspace dependencies
shared = { path = "../shared" }
game_sockets = { path = "../game_sockets"}

#logs
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = {version = "4.6.1", features = ["derive"] }
