[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
shared = { path = "../shared" }
uuid = { version = "1.23.1", features = ["v4"] }
redis = { version = "0.25", features = ["tokio-comp"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
