[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
shared = { path = "../shared" }
redis = { version = "0.25", features = ["tokio-comp"] }
serde_json = "1.0.149"
sysinfo = "0.30"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
game_sockets = { path = "../game_sockets" }
